--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,12 @@ body {
   background: #eceff1;
   color: rgba(0, 0, 0, 0.87);
   font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-size: 0.9em;
   margin: 0;
   padding: 0;
+}
+
+.user {
+  text-decoration: underline;
+  cursor: pointer;
 }
