--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,62 @@
+html,
 body {
   background: #eceff1;
   color: rgba(0, 0, 0, 0.87);
   font-family: Roboto, Helvetica, Arial, sans-serif;
-  font-size: 0.9em;
+  font-size: 12px;
   margin: 0;
   padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#name-area {
+  flex: 0 1 auto;
+  padding: 10px;
+}
+
+#chat-area {
+  flex: 1 1 auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+#users {
+  flex: 1 20%;
+  overflow-y: auto;
+  border: 1px solid rgba(0, 0, 0, 0.87);
+  padding: 2px;
 }
 
 .user {
   text-decoration: underline;
   cursor: pointer;
+}
+
+#chats {
+  flex: 1 80%;
+  border: 1px solid rgba(0, 0, 0, 0.87);
+  padding: 2px;
+}
+
+.message-area {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.messages {
+  flex: 1 1 auto;
+  overflow-y: auto;
+}
+
+.m {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+input[type="text"] {
+  flex: 0 1 auto;
 }
