--- a/public/style.css
+++ b/public/style.css
@@ -11,12 +11,12 @@ body {
   flex-direction: column;
 }
 
-#name-area {
+#header {
   flex: 0 1 auto;
   padding: 10px;
 }
 
-#chat-area {
+#content {
   flex: 1 1 auto;
   padding: 10px;
   display: flex;
@@ -41,7 +41,7 @@ body {
   padding: 2px;
 }
 
-.message-area {
+.chat {
   height: 100%;
   display: flex;
   flex-direction: column;
