--- a/public/style.css
+++ b/public/style.css
@@ -11,52 +11,6 @@ body {
   flex-direction: column;
 }
 
-#header {
-  flex: 0 1 auto;
-  padding: 10px;
-}
-
-#content {
-  flex: 1 1 auto;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-}
-
-#users {
-  flex: 1 20%;
-  overflow-y: auto;
-  border: 1px solid rgba(0, 0, 0, 0.87);
-  padding: 2px;
-}
-
-.user {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-#chats {
-  flex: 1 80%;
-  border: 1px solid rgba(0, 0, 0, 0.87);
-  padding: 2px;
-}
-
-.chat {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.messages {
-  flex: 1 1 auto;
-  overflow-y: auto;
-}
-
-.m {
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
-
-input[type="text"] {
-  flex: 0 1 auto;
+input {
+  margin-left: 10px;
 }
